# aipify-platform

./: .env.example  .gitignore  AAL.md  ABOS_BRAND_TERMINOLOGY_STANDARD.md  ABOS_FOUNDATION.md  ACTION_APPROVAL_ENGINE.md  ACTION_HUB 2.md  ADAPTIVE_ORGANIZATION_CONTINUOUS_OPTIMIZATION_ENGINE_PHASE134 2.md  ADMIN_ASSISTANT_ENGINE_PHASE_A6.md  AGENTS.md  AIPIFY_ACADEMY_LEARNING_ECOSYSTEM_PHASE94.md  AIPIFY_ACTION_CENTER_APPROVAL_DELEGATION_ENGINE_PHASE262.md  AIPIFY_ACTION_CENTER_EXECUTION_COORDINATION_ENGINE_PHASE263.md  AIPIFY_ACTION_CENTER_EXECUTION_ENGINE_PHASE205 2.md  AIPIFY_ACTION_CENTER_IMPACT_ANALYSIS_ENGINE_PHASE261.md  AIPIFY_AI_DECISION_SUPPORT_RECOMMENDATION_ENGINE_PHASE280.md  AIPIFY_APPROVAL_HUMAN_OVERSIGHT_CENTER_PHASE299.md  AIPIFY_APP_ACTION_TIMELINE_ACTIVITY_HISTORY_CENTER_PHASE270.md  AIPIFY_APP_BUSINESS_OPERATING_SYSTEM_COMMAND_CENTER_PHASE300.md  AIPIFY_APP_BUSINESS_PACK_AUTOMATION_ORCHESTRATION_CENTER_PHASE307.md  AIPIFY_APP_BUSINESS_PACK_COMPLIANCE_POLICY_CENTER_PHASE309.md  AIPIFY_APP_BUSINESS_PACK_ECOSYSTEM_INTELLIGENCE_CENTER_PHASE306.md  AIPIFY_APP_BUSINESS_PACK_EXECUTIVE_PORTFOLIO_CENTER_PHASE310.md  AIPIFY_APP_BUSINESS_PACK_GOVERNANCE_OWNERSHIP_CENTER_PHASE308.md  AIPIFY_APP_BUSINESS_PACK_LIFECYCLE_MANAGEMENT_CENTER_PHASE303.md  AIPIFY_APP_BUSINESS_PACK_OPERATIONS_COMMAND_CENTER_PHASE305.md  AIPIFY_APP_BUSINESS_PACK_RECOMMENDATION_ENGINE_PHASE302.md  AIPIFY_APP_BUSINESS_PACK_ROI_VALUE_REALIZATION_CENTER_PHASE304.md  AIPIFY_APP_BUSINESS_PACK_SUCCESS_CENTER_PHASE301.md  AIPIFY_APP_COMPLIANCE_POLICY_MANAGEMENT_CENTER_PHASE280.md  (+1179 more)
app/: globals.css  (+6 more)
(+14551 files in other folders)
