[package]
name = "aipify-command-center"
version = "0.1.0"
description = "Aipify Command Center desktop client"
authors = ["Aipify Group AS"]
edition = "2021"

[lib]
name = "aipify_command_center_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
